--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -15,6 +15,7 @@
             margin: 0;
             padding: 20px;
             background-color: #f5f5f5;
+            font-size: 16px; /* ベースフォントサイズを追加 */
         }
         .container {
             max-width: 600px;
@@ -26,9 +27,10 @@
         }
         .property-name {
             text-align: center;
-            font-size: 24px;
+            font-size: 28px; /* 24px → 28px */
             margin-bottom: 20px;
             color: #333;
+            font-weight: 600;
         }
         .error-message {
             background-color: #f8d7da;
@@ -71,10 +73,10 @@
             border-color: #FF9800;
         }
         .room-text {
-            font-size: 16px;
+            font-size: 18px; /* 16px → 18px */
             font-weight: bold;
             color: #333;
-            line-height: 1.2;
+            line-height: 1.3;
         }
         .room-button.reading-completed .room-text {
             color: #2E7D32;
@@ -86,10 +88,11 @@
             background-color: #6c757d;
             color: white;
             border: none;
-            padding: 10px 20px;
+            padding: 12px 24px; /* 10px 20px → 12px 24px */
             border-radius: 5px;
             cursor: pointer;
             margin: 5px;
+            font-size: 16px; /* 新規追加 */
         }
         .back-button:hover {
             background-color: #5a6268;
@@ -98,16 +101,16 @@
             background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
             color: white;
             border: none;
-            padding: 15px 25px;
+            padding: 18px 30px; /* 15px 25px → 18px 30px */
             border-radius: 8px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px; /* 16px → 18px */
             font-weight: 600;
             margin: 10px 5px;
             box-shadow: 0 4px 12px rgba(40, 167, 69, 0.25);
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             border: 1px solid rgba(255,255,255,0.3);
-            min-width: 200px;
+            min-width: 220px; /* 200px → 220px */
         }
         .complete-inspection-button:hover {
             background: linear-gradient(135deg, #218838 0%, #1ea472 100%);
@@ -131,13 +134,53 @@
             padding: 20px;
         }
         
-        /* レスポンシブ対応 */
-        @media (max-width: 480px) {
-            .room-grid {
-                grid-template-columns: 1fr;
+        /* モバイル向けフォントサイズ大幅拡大 */
+        @media (max-width: 768px) {
+            .property-name {
+                font-size: 24px; /* モバイルでも大きく */
             }
             .room-text {
-                font-size: 14px;
+                font-size: 16px; /* モバイル用サイズ */
+            }
+            .complete-inspection-button {
+                font-size: 16px;
+                padding: 16px 24px;
+            }
+            .back-button {
+                font-size: 16px;
+                padding: 12px 20px;
+            }
+        }
+        
+        /* 小型デバイス向け */
+        @media (max-width: 480px) {
+            .property-name {
+                font-size: 22px; /* 小型デバイスでも十分な大きさ */
+            }
+            .room-text {
+                font-size: 15px; /* 14px → 15px */
+            }
+            .room-grid {
+                grid-template-columns: 1fr;
+                gap: 12px; /* 10px → 12px */
+            }
+            .room-button {
+                padding: 18px; /* 15px → 18px */
+                min-height: 60px; /* 50px → 60px */
+            }
+            .complete-inspection-button {
+                font-size: 15px;
+                padding: 16px 20px;
+                min-width: 200px;
+            }
+            .container {
+                padding: 16px;
+            }
+        }
+        /* レスポンシブ対応 */
+        @media (max-width: 480px) {
+            .room-text {
+                font-size: 15px; /* 既に上で設定済み */
             }
         }
     </style>
