--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -153,13 +153,13 @@
       width: 100%;
     }
     .property-name {
-      font-size: clamp(1.2rem, 6vw, 2.8rem); /* 画面幅に応じて可変・最大化 */
+      font-size: clamp(2rem, 7vw, 3.5rem); /* さらに大きく・最小2rem 最大3.5rem */
       font-weight: 700;
       color: #212529;
       line-height: 1.1;
-      white-space: nowrap; /* 折り返し禁止 */
-      overflow: visible; /* 省略記号を無効化 */
-      text-overflow: unset; /* 省略記号を無効化 */
+      white-space: nowrap;
+      overflow: visible;
+      text-overflow: unset;
       max-width: 100%;
       flex: 1 1 auto;
       transition: font-size 0.3s ease;
@@ -169,12 +169,12 @@
     }
     @media (max-width: 768px) {
       .property-name {
-        font-size: clamp(1rem, 8vw, 2rem);
+        font-size: clamp(1.5rem, 10vw, 2.5rem);
       }
     }
     @media (max-width: 480px) {
       .property-name {
-        font-size: clamp(0.9rem, 10vw, 1.3rem);
+        font-size: clamp(1.2rem, 13vw, 1.8rem);
       }
     }
     .completion-date { 
