--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -174,7 +174,7 @@
     }
     @media (max-width: 480px) {
       .property-name {
-        font-size: clamp(1.2rem, 13vw, 1.8rem);
+        font-size: clamp(2.2rem, 14vw, 3.2rem); /* モバイルでさらに大きく */
       }
     }
     .completion-date { 
