--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -153,28 +153,27 @@
       width: 100%;
     }
     .property-name {
-      font-size: clamp(2rem, 7vw, 3.5rem) !important; /* !importantで上書き保証 */
-      font-weight: 700;
-      color: #212529;
-      line-height: 1.1;
-      white-space: nowrap;
-      overflow: visible;
-      text-overflow: unset;
-      max-width: 100%;
-      flex: 1 1 auto;
-      transition: font-size 0.3s ease;
-      word-break: break-all;
-      letter-spacing: 0.01em;
-      text-align: left;
+      font-size: clamp(2.5rem, 12vw, 4rem) !important; /* meter_reading.cssよりも大きく・強制 */
+      font-weight: 800 !important;
+      margin: 0 0 10px 0 !important;
+      color: #212529 !important;
+      line-height: 1.05 !important;
+      white-space: nowrap !important;
+      overflow: visible !important;
+      text-overflow: unset !important;
+      max-width: 100% !important;
+      flex: 1 1 auto !important;
+      letter-spacing: 0.01em !important;
+      text-align: left !important;
     }
     @media (max-width: 768px) {
       .property-name {
-        font-size: clamp(1.5rem, 10vw, 2.5rem) !important;
+        font-size: clamp(2rem, 16vw, 3rem) !important;
       }
     }
     @media (max-width: 480px) {
       .property-name {
-        font-size: clamp(2.2rem, 14vw, 3.2rem) !important;
+        font-size: clamp(2.2rem, 18vw, 2.7rem) !important;
       }
     }
     .completion-date { 
