--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -308,6 +308,8 @@
 <body>
   <div id="root" class="styles-loading"></div>
 
+  <link rel="stylesheet" href="../../css_styles/property_select.css">
+
   <script type="text/babel">
     // 🦁 Brave Browser Cache Busting Version 20250614c
     // WOFF完全削除済み - 一般ブラウザ専用
