--- a/html_files/main_app/property_select.html
+++ b/html_files/main_app/property_select.html
@@ -133,7 +133,7 @@
       opacity: 0.6; cursor: not-allowed; 
     }
     .property-card { 
-      display: flex; justify-content: space-between; align-items: flex-start; /* center → flex-start */
+      display: flex; justify-content: space-between; align-items: flex-start; 
       gap: 16px; /* 要素間の間隔を追加 */
     }
     .property-info { flex: 1; }
@@ -146,33 +146,9 @@
       box-shadow: 0 1px 3px rgba(0,0,0,0.05);
     }
     .property-name-row { 
-      display: flex; justify-content: space-between; align-items: flex-start; /* center → flex-start */
+      display: flex; justify-content: space-between; align-items: flex-start; 
       flex-wrap: wrap; gap: 8px; 
-      min-height: auto; /* 固定高を削除して自動調整 */
-    }
-    .property-name { 
-      font-size: clamp(2.5rem, 12vw, 4rem);
-      font-weight: 800;
-      margin: 0 0 10px 0;
-      color: #212529;
-      line-height: 1.05;
-      white-space: nowrap;
-      overflow: visible;
-      text-overflow: unset;
-      max-width: 100%;
-      flex: 1 1 auto;
-      letter-spacing: 0.01em;
-      text-align: left;
-    }
-    @media (max-width: 768px) {
-      .property-name {
-        font-size: clamp(2rem, 16vw, 3rem);
-      }
-    }
-    @media (max-width: 480px) {
-      .property-name {
-        font-size: clamp(2.2rem, 14vw, 3.2rem);
-      }
+      min-height: auto; 
     }
     .completion-date { 
       font-size: 12px; color: #ffffff; font-weight: 600; 
