--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -24,7 +24,7 @@
   <script type="text/babel">
     const { useState, useEffect } = React;
     const { Box, Typography, Button, Paper, Grid, CircularProgress, Alert, Container, Stack } = MaterialUI;
-    const { ArrowForwardIos, CheckCircle, ErrorOutline } = MaterialUIIcons;
+    const { ArrowForwardIos, CheckCircle, ErrorOutline } = MaterialUI.Icons;
 
     function getGASUrl() {
       return sessionStorage.getItem('gasWebAppUrl');
