--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -15,7 +15,9 @@
 <body>
     <div class="container">
         <div class="mantine-title">部屋選択</div>
-        <div class="property-name" id="propertyName">物件名読み込み中...</div>
+        <div class="property-info-card">
+            <div class="property-name" id="propertyName">物件名読み込み中...</div>
+        </div>
         
         <div class="button-container">
             <button 
