--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -13,8 +13,11 @@
     <link rel="stylesheet" href="../../css_styles/room_select.css">
 </head>
 <body>
+    <div class="app-header">
+        <button class="back-button" onclick="goBack()" aria-label="戻る">&lt;</button>
+        <h1 class="header-title">部屋選択</h1>
+    </div>
     <div class="container">
-        <div class="mantine-title">部屋選択</div>
         <div class="property-info-card">
             <div class="property-name" id="propertyName">物件名読み込み中...</div>
         </div>
@@ -34,7 +37,6 @@
         
         <div id="loading" class="loading">部屋データを読み込み中...</div>
         <div id="roomGrid" class="room-grid" style="display: none;"></div>
-        <button class="back-button" onclick="goBack()">戻る</button>
     </div>
 
     <script>        // GAS Web App URL取得（property_select.htmlから継承）
