--- a/html_files/main_app/room_select.html
+++ b/html_files/main_app/room_select.html
@@ -21,7 +21,7 @@
             <button class="mui-icon-button back-btn" onclick="goBack()" aria-label="戻る">
                 <span class="material-icons">arrow_back</span>
             </button>
-            <h1 class="mui-typography-h6">部屋選択</h1>
+            <h1 class="header-title">部屋選択</h1>
         </div>
     </header>
 
